# NetHang

./: .gitignore  CONTRIBUTING.md  Makefile  NetHang.py  README.md  coveralls.json  nc-hangman.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: autorelease.yml  black.yml  format-and-lint.yml  format-and-lint.yml.disabled  pylint.yml  run-tests.yml
.trunk/: trunk.yaml
.trunk/configs/: .flake8  .markdownlint.yaml  .pylintrc
NetHang/: __init__.py  game.py  graphics.py  players.py  run.py  server.py  util.py  yaml.py
NetHang/config/: README.md  settings.json  settings.yml
NetHang/examples/: README.md  hangman.json  hangman.py
tests/: sample.json  test_PlayerList.py  test_functional_ui.py  test_unit_players.py  test_unit_run.py  test_unit_util.py  test_user_input.py
