[metadata]
name = NetHang
version = 0.0.1.dev17
license = MIT
description = Launch server and play hangman with friends!
author = magnetrwn
url = https://github.com/magnetrwn/NetHang

[options]
packages = NetHang
tests_require = pytest

[options.entry_points]
console_scripts =
    NetHang = NetHang.run:cli_run
    nethang = NetHang.run:cli_run

[options.package_data]
NetHang =
    config/settings.yml