[metadata]
name = NetHang
version = 0.0.1.dev25
license = MIT
description = Compact server library to manage multiplayer lobbies for games.
author = magnetrwn
url = https://github.com/magnetrwn/NetHang

[options]
packages = NetHang
tests_require = pytest

[options.entry_points]
console_scripts =
    NetHang = NetHang.run:cli_run
    nethang = NetHang.run:cli_run

[options.package_data]
NetHang =
    config/*
    examples/*

[coverage:run]
omit =
    NetHang/config/*
    NetHang/examples/*
